--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <!--在引用时请在maven中央仓库搜索最新版本号-->
             <version>2.0.2</version>
         </dependency>
+        <!--腾讯云存储依赖-->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.8</version>
+        </dependency>
 
     </dependencies>
     <build>
